final layout of the login page, creating adaptability

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
     height: 100%;
     width: 100%;
-    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-style: normal;
     background-color: black;
 }
