--- a/src/pages/main-page/components/style.module.css
+++ b/src/pages/main-page/components/style.module.css
@@ -12,17 +12,21 @@
 
 .bodyHead {
     min-width: 100%;
-    height: 36%;
-    min-height: 36%;
+    min-height: 10%;
     display: flex;
     background-color: #283618;
+    align-items: center;
+    justify-content: center;
 }
 
 .bodyLeg {
     width: 100%;
-    height: 64%;
-    display: block;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #fefae0;
+    padding-top: 20px;
 }
 
 .logoContainer {
@@ -30,14 +34,48 @@
     width: fit-content;
     height: fit-content;
     position: absolute;
+    padding-left: 2%;
 }
 
 .logo {
     display: flex;
-    justify-content: center;
+    justify-content: start;
 }
 
 .textStyle {
     color: white;
-    
+}
+
+.jobList {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.jobCard {
+    background-color: white;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease-in-out;
+}
+
+.jobCard:hover {
+    transform: scale(1.02);
+}
+
+.jobCard h2 {
+    margin: 0;
+    font-size: 1.5rem;
+    color: #283618;
+}
+
+.jobCard p {
+    margin: 5px 0 0;
+    color: #606c38;
+}
+
+.logoPhoto {
+    width: 50%;
 }
