creating a user session, implementing "Users" schemes

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
     width: 100%;
     font-family: "Roboto", sans-serif;
     font-style: normal;
-    background-color: black;
+    background-color: #fefae0;
 }
